kfdefs/overlays/prod/dh-prod-superset/supersetdb-service-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: supersetdb
  name: supersetdb
spec:
  ports:
  - name: postgresql
    port: 5432
    targetPort: 5432
    protocol: TCP
    nodePort: 32258
  type: NodePort
