kfdefs/overlays/prod/dh-prod-superset/superset-secured-route.enc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    annotations:
        haproxy.router.openshift.io/timeout: 1800s
    labels:
        app: superset
    name: superset-datahub
spec:
    host: superset.datahub.redhat.com
    port:
        targetPort: 8088-tcp
    to:
        kind: Service
        name: superset
    tls:
        termination: ENC[AES256_GCM,data:xZu2Kg==,iv:6wZZLetrTtTR0c7PXxC9AMJHgD5ASxWA8o/rr/di/Uc=,tag:hnL3VSoeecAE6QtiSjmjgg==,type:str]
        insecureEdgeTerminationPolicy: ENC[AES256_GCM,data:0p1ZNvUCzWQ=,iv:T7f3o7Kufu+WNCNusFR19XN8nP4vBXQ5k8wqO/SBwiQ=,tag:QJzGI6Nhe0NFt9xZ7ThXzw==,type:str]
        caCertificate: ENC[AES256_GCM,data:lRbBpSijb1rJdBLrlppMsOzfdUCJzbMZrOlguflm62+q2dMfEBDLm97PEVasEK8xpw/xEZYtb2RaRFmlbqdnXSy5nU3hl2o1qdGFpyTKyCLhAh8a8LEnEf/7iEkeKEGCmxGSXvRFKml7/xAe3gyVKVybtgF5WXhuvhMo0hQETwZqKDoPDorPhieG3yS36tF/KBTud6tPhrYl6WM0bMExe55gN+CxihsT0jdjx03ChIkbqBlA431FxI5tRttUbxmDdS/gzN1lmEa/u9NB1EKB6yrA1rJJRxugoD7nT8LuDmPfM+BPfbGpHDUrN8QaDQqABNybe9KQD9lvwXJWvzYTTeHhgOBAmbI9BnbpZ+xJCNLj/yKIDOXYvcUAHefouyBXrr1tDHzWRV5yCKQCzwG6XbdDMqQ7/CYei3PEwwSPGsp/f+vtA1JWAv6Kg16oMx5x/b465szld [...]
        certificate: ENC[AES256_GCM,data:QFKiBh7OXk4lQQYQzYWZz1Zkmc3jR6ZCtne9KtS02BSy61QpIIuVHRA3Z6gzdkXGrCzVAozOaOYZi5vJRFOGQ+tVJCFaGKRrl9RR5ZSCAscrfEQKFY29r7TqWbk6eFkhDdYaXZwyZgs/9vtpoglEc7qkAhq9Fw1BEFQHKU1bnuOM00KgjbTFshzRQ/fTpipliF1MhbpmVXka5l3uW8QsbXtN0cz/IGODiZh1MR//BQnxMo9h7B4k/85XHGVKtTopUsxyCYD8pP6D4EDQ3iEH1HusbXSKEu1A0pDhJOwSO20TD4EPC8wGh9ZhU3K0OPNl3EUvCJmdJrovSsoo8l5X7iOk4hGoPdzFdTZLnZwugRFdaBKulkoI1hPfRUUMizTGd9u/ygkPIx+NPV8xzKu4kU3czoTskFupEUKLDpKkxlBKr4y9Iq+T6x2Isno0gX6cqqMS3gNU22B [...]
        key: ENC[AES256_GCM,data:RgHJ7X5KCmtqj67roiLF4sqWi+AvtIG2iAFS2670jwT/zjR77uM0qf1c47Jx+023NawciUcJ8lJw3PrkhqWkd3pqPh6aC5ourXXWaD/eAYCdtWCWI+vRtQY2rMH83IGDpolckw/1xhucwGolAwu6lVrnfkKbmRHV+yGVeuvh9+yoVXuLJ8kPjsW4tdQUv65TFcBXvkkjYjFMQRXdYQELcS1S98E9NPuZNlJQ1pIzb7L8XuoQjv99mrSLoIXTNyIzzl3rvjbOvRFdQ7R7V6DMAwcC7ujMyqzVP9dZDVkqItf8KaG3Ptx8L/JJknG1jGt9qd459OKGkxyk9KcIQJR7q+V1m1kY03+bohsmYn/vjgwG9u8tiquU6gQdvkR3mii34MfgasfrGmYdnuhFEGRr7Hv4iAaVuCwhTGcboDziRx02TXqSEgFw8uF3Rqkw89moNCNLiKJM52HjhYC0JTe [...]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    lastmodified: '2021-09-13T14:51:40Z'
    mac: ENC[AES256_GCM,data:zndgFGgKTOWOyT/eFzIm8afeeaxeXWkYK5YgYAnQy1uhDjJBq7hRWln0eR0MzVZhWI4Zyo0QaWibujWw+zM6I1lURiMM9FUK8yvE48NLLamTvGozVabHogXISmEmqop/20u6bp0dzy6x0tyR5+j9vFOJuxBi0JG3qwqmX7telbo=,iv:0KjG3Bf1F3opFC3hDdnLDHjC54aZFYZiwoqpi9e/qRU=,tag:q0eVu3ifP/upvGpXzywBxg==,type:str]
    pgp:
    -   created_at: '2021-09-08T20:35:36Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQgAot3K2qTPlLOSz3fuBqGzsXnv3VWTMfleY3caCnu3Lgaa
[...]
            AO4J38YaGT6kmmOY/Wep/xRhn79zVEioJwYPPff46A==
            =jIre
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.6.1
